--- a/templates/landing/agregar.html
+++ b/templates/landing/agregar.html
@@ -2,5 +2,42 @@
    {% block title %} Agregar {% endblock%}
     
     {% block content %}
-        <h1>Aqui va ir un formulario</h1>
+        
+
+  <div class="row">
+    <form class="col s12" action="{% url 'landing:agregar' %}" method="POST">
+      {% csrf_token %}
+      <div class="row">
+        <div class="input-field col s6">
+          <input placeholder="Titulo" id="titulo" type="text" name="titulo" class="validate">
+          <label for="titulo">Titulo</label>
+        </div>
+        <div class="input-field col s12">
+          <textarea id="descripcion" name="descripcion" class="materialize-textarea"></textarea>
+          <label for="descripcion">Descripción</label>
+        </div>
+      </div>
+      <div class="row">
+         <label>Prioridad</label>
+            <select class="browser-default" name="prioridad">
+                <option value="" disable selected>Choose your option</option>
+                <option value="AT">Alta</option>
+                <option value="NR">Normal</option>
+                <option value="BJ">Baja</option>
+            </select>
+      </div>
+      <div class="row">
+         <button class="waves-effect waves-light btn" type="submit" >Guardar</button>
+      </div>
+     
+    </form>
+  </div>
+
+
+
+
+
+
+
+
     {% endblock %}
